# robot_format_converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: mujoco_xml_schema.md  schema_parsing_guide.md  unified_schema_design.md
examples/: basic_conversion.py  parser_examples.py
examples/advanced/: batch_conversion_example.py  cli_usage_examples.py
examples/basic/: comprehensive_demo.py  conversion_demo.py
examples/config/: comprehensive_robot_schema.yaml  proper_example_schema.yaml
examples/outputs/: README.md
examples/outputs/batch_processing/: conversion_summary.txt
examples/outputs/batch_processing/scene/: scene_from_mjcf.urdf  scene_schema.yaml
examples/outputs/batch_processing/ur10e_reconstructed/: ur10e_reconstructed_schema.yaml
examples/outputs/demo_files/: example_roundtrip.yaml  ur10e_from_mjcf.urdf
examples/outputs/mjcf_conversions/: ur10e_reconstructed.xml  ur10e_schema.yaml
examples/outputs/reports/: batch_conversion_report.json
examples/outputs/schema_conversions/: test.yaml  ur10_demo.yaml
examples/outputs/urdf_conversions/: example_robot.urdf  ur10_converted.urdf  urdf_to_schema.yaml
examples/robot_models/: ur10_conversion_example.py
robot_format_converter/: __init__.py  __main__.py  core.py  exporters.py  parsers.py  schema.py  utils.py
scripts/: cleanup.py  validate_models.py
tests/: conftest.py  run_all_tests.py  test_core.py  test_parsers.py
